# markov_genome

./: Cargo.toml  LICENSE.md  README.md  Shared k-mer counts.ipynb  kmer_dist.ipynb  make_count_wf.sh
scripts/: make_shared_counts.sh  mutate.sh  simulate.sh
src/: alphabets.rs  args.rs  io.rs  main.rs  markov.rs  mutation.rs  seq.fasta
test/: corrupt.fasta  ref.fasta
