[package]
name = "markov_genome"
version = "0.1.0"
edition = "2025"
authors = ["Evelin Aasna"]
description = "Learn the properties of a sequence database and simulate random sequences in a Markov process"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
bio = "1"
markov = "1.1.0"
seq_io = "0.3.4"
rand = "0.9.2"
