[package]
name = "markov_genome"
version = "0.1.0"
edition = "2021"
authors = ["Evelin Aasna"]
description = "Learn the properties of a FASTA sequence database and simulate sequences in a Markov process"
keywords = ["bioinformatics", "genomics", "simulation", "markov", "binaries"]
categories = ["science::bioinformatics::genomics", "science::bioinformatics::sequence-analysis", "simulation"]
license = "BSD-3-Clause"
repository = "https://github.com/eaasna/markov_genome/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive", "cargo"] }
bio = "1"
rand = "0.9.2"
